--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bunyan": "^1.8.12",
+    "minimist": "1.2.5",
     "express": "^4.17.1",
     "ip": "^1.1.5",
     "json-log": "^3.0.1",
